<resources>
    <string name="app_name_release">Fcitx5 for Android</string>
    <string name="app_name_debug">Fcitx5 for Android (Debug)</string>
    <string name="save">Save</string>
    <string name="input_methods">Input Methods</string>
    <string name="add_input_method">Add Input Method</string>
    <string name="addons">Addons</string>
    <string name="conf">Configuration</string>
    <string name="global_options">Global Options</string>
    <string name="behavior">Behavior</string>
    <string name="advanced">Advanced</string>
    <string name="ignore_sys_cursor">Ignore system cursor position</string>
    <string name="hide_key_config">Hide hotkey configurations</string>
    <string name="_not_available_">(Not Available)</string>
    <string name="button_haptic_feedback">Haptic feedback on keypress</string>
    <string name="button_up_haptic_feedback">Haptic feedback on keyup</string>
    <string name="button_vibration_milliseconds">Keypress vibration duration</string>
    <string name="button_press">Press</string>
    <string name="button_long_press">Long press</string>
    <string name="button_vibration_amplitude">Keypress vibration amplitude</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="delete_and_sync_data">Delete and sync runtime data</string>
    <string name="delete_and_sync_data_message">Delete current data directory and synchronize from assets bundled in app</string>
    <string name="enable_ime">Enable Input Method</string>
    <string name="enable_ime_hint">Enable &lt;b>%1$s&lt;/b> in Language and input settings</string>
    <string name="select_ime">Select Input Method</string>
    <string name="select_ime_hint">Select &lt;b>%1$s&lt;/b> as your default input method</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="done">Done</string>
    <string name="setup_keyboard">Finish setting up the keyboard</string>
    <string name="setup_channel">Setup Wizard</string>
    <string name="pinyin_dict">Pinyin Dictionaries</string>
    <string name="reloading">Reloading</string>
    <string name="importing">Importing</string>
    <string name="import_error">Import Error</string>
    <string name="dict_already_exists">Dictionary already exists</string>
    <string name="invalid_dict">Invalid type of dictionary</string>
    <string name="whether_import_dict">Would you like to import this dictionary?</string>
    <string name="import_">Import</string>
    <string name="synced">Synced!</string>
    <string name="loading">Loading</string>
    <string name="clipboard_listening">Clipboard listening</string>
    <string name="clipboard_limit">Clipboard history limit</string>
    <string name="clipboard_enable">Enable Clipboard</string>
    <string name="expanded_candidate_style">Expanded candidate style</string>
    <string name="expanded_candidate_style_grid">Grid</string>
    <string name="expanded_candidate_style_flexbox">Flexbox</string>
    <string name="no_more_input_methods">No more input methods to switch</string>
    <string name="add_more_input_methods">Would you like to add more input methods?</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="current_version">Current version</string>
    <string name="real_time_logs">Real-time logs</string>
    <string name="developer">Developer</string>
    <string name="clear_clb_db">Clear clipboard database</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="delete">Delete</string>
    <string name="clipboard">Clipboard</string>
    <string name="keyboard_height">Keyboard height</string>
    <string name="keyboard">Keyboard</string>
    <string name="clipboard_suggestion_timeout">Clipboard suggestion timeout</string>
    <string name="version">Version</string>
    <string name="build_time">Build time</string>
    <string name="build_git_hash">Build Git hash</string>
    <string name="source_code">Source code</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="license">License</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="licenses_of_third_party_libraries">Licenses of third-party libraries</string>
    <string name="github_repo">GitHub repository</string>
    <string name="expanded_candidate_grid_span_count">Grid style expanded candidate span count</string>
    <string name="no_config_options">Currently no configuration options are available</string>
    <string name="unimplemented_type">⛔ Unimplemented type</string>
    <string name="select">Select</string>
    <string name="text_editing">Text Editing</string>
    <string name="instruction_enable_clipboard_listening">To use clipboard management, please enable clipboard listening in settings</string>
    <string name="instruction_copy">Try copying something</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="app_crash">Application crashed</string>
    <string name="app_crash_message">Sorry, but we bring you some logs to investigate.</string>
    <string name="crash_logs">Crash logs</string>
    <string name="verbose_log">Verbose logging</string>
    <string name="verbose_log_summary">Requires restart</string>
    <string name="removed_x">Removed %1$s</string>
    <string name="added_x">Added %1$s</string>
    <string name="edited_x">Edited %1$s</string>
    <string name="invalid_value">Invalid value</string>
    <string name="keyboard_long_press_delay">Key long press delay</string>
    <string name="quickphrase_editor">Quick Phrase Editor</string>
    <string name="quickphrase_already_exists">Quick phrase already exists</string>
    <string name="invalid_quickphrase">Invalid type of quick phrase</string>
    <string name="create_new">Create new</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="quickphrase_keyword">Keyword</string>
    <string name="quickphrase_phrase">Phrase</string>
    <string name="reload_config">Reload Config</string>
    <string name="input_method_options">Input Method Options</string>
    <string name="theme">Theme</string>
    <string name="key_ripple_effect">Enable key ripple effect</string>
    <string name="key_border">Enable key border</string>
    <string name="brightness">Brightness</string>
    <string name="key_radius">Key radius</string>
    <string name="bottom_corner_radius_adjust">adjus radius for bottom corner keys</string>
    <string name="text_editing_button_radius">Text editing button radius</string>
    <string name="clipboard_entry_radius">Clipboard entry radius</string>
    <string name="key_horizontal_margin">Key horizontal margin</string>
    <string name="key_vertical_margin">Key vertical margin</string>
    <string name="configure">Configure</string>
    <string name="choose_image">Choose Image…</string>
    <string name="dark_keys">Dark Keys</string>
    <string name="recrop_image">Re-Crop Image</string>
    <string name="navbar_background">Navigation bar background</string>
    <string name="navbar_bkg_none">No background</string>
    <string name="navbar_bkg_color_only">Follow keyboard color</string>
    <string name="navbar_bkg_full">Keyboard background image</string>
    <string name="punctuation_position">Punctuation position</string>
    <string name="punctuation_pos_bottom">Bottom (Portrait only)</string>
    <string name="punctuation_pos_top_right">Top Right</string>
    <string name="expand_toolbar_by_default">Expand toolbar by default</string>
    <string name="popup_on_key_press">Popup on key press</string>
    <string name="disable_animation">Disable animation</string>
    <string name="import_from_file">Import from file…</string>
    <string name="duplicate_builtin_theme">Duplicate builtin theme…</string>
    <string name="exception_logcat_created">Logcat process is already created</string>
    <string name="exception_quickphrase_parse">Failed to parse quick phrase line: %1$s</string>
    <string name="exception_quickphrase_filename">The filename extension of %1$s does not indicate a quick phrase</string>
    <string name="exception_theme_filename">The filename extension of %1$s does not indicate a theme</string>
    <string name="exception_theme_unknown">Theme %1$s is unknown</string>
    <string name="exception_libime_dict_filename">The filename extension of %1$s does not indicate a libime dict</string>
    <string name="exception_text_dict_filename">The filename extension of %1$s does not indicate a text dict</string>
    <string name="exception_sougou_dict_filename">The filename extension of %1$s does not indicate a sogou dict</string>
    <string name="exception_dict_filename">The filename extension of %1$s does not indicate a dict</string>
    <string name="exception_theme_json">Unable to find theme json</string>
    <string name="exception_theme_name_clash">Theme name clashes with builtin themes</string>
    <string name="exception_theme_src_image">Unable to save source image of theme background</string>
    <string name="exception_theme_cropped_image">Unable to save cropped image of theme background</string>
    <string name="follow_system_day_night_theme">Follow system day night theme</string>
    <string name="follow_system_day_night_theme_summary">Override manual theme selection</string>
    <string name="light_mode_theme">Light mode theme</string>
    <string name="dark_mode_theme">Dark mode theme</string>
    <string name="new_theme">New theme</string>
    <string name="skip">Skip</string>
    <string name="horizontal_candidate_growth">Stretch horizontal candidates to fill the remaining width</string>
    <string name="none">None</string>
    <string name="theme_migrated">Theme has been migrated to the current version</string>
    <string name="keep_keyboard_letters_uppercase">Keep keyboard letters uppercase</string>
    <string name="choose_input_method">Choose input method</string>
    <string name="edit_clipboard">Edit clipboard</string>
    <string name="clipboard_edit_text_hint">Clipboard content</string>
    <string name="config_addon_not_loaded">No configuration options available, maybe this addon is disabled when fcitx start?</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="keyboard_bottom_padding">Keyboard bottom padding</string>
    <string name="keyboard_side_padding">Keyboard side padding</string>
    <string name="clipboard_suggestion">Show clipboard suggestions</string>
    <string name="disable_addon_warn_title">Disable Addon</string>
    <string name="disable_addon_warn_name">Disabling %1$s will also:</string>
    <string name="disable_addon_warn_dep">Disable %1$s</string>
    <string name="disable_addon_warn_optdep">Disable some features in %1$s</string>
    <string name="disable_addon_warn_confirm">Are you sure you want to disable it?</string>
    <string name="swipe_symbol_behavior">Swipe to input punctuations and digits</string>
    <string name="swipe_down">Swipe down</string>
    <string name="swipe_up">Swipe up</string>
    <string name="disabled">Disabled</string>
    <string name="system_default">System default</string>
    <string name="editor_info_inspector">EditorInfo Inspector</string>
    <string name="default_">Default</string>
    <string name="saving">Saving</string>
    <string name="delete_all_pinned_items">Delete all pinned items?</string>
    <string name="vivo_keypress_workaround">vivo Origin OS keypress workaround</string>
    <string name="invalid_im">Invalid input method configuration file:\n%1$s</string>
    <string name="invalid_table_dict">Invalid dictionary:\n%1$s</string>
    <string name="table_im">Table Input Methods</string>
    <string name="plugins">Plugins</string>
</resources>