<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.baidu.input_mi.ui.main.MainFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_mainFragment_to_globalConfigFragment"
            app:destination="@id/globalConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_addonListFragment"
            app:destination="@id/addonListFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_imListFragment"
            app:destination="@id/imListFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_imConfigFragment"
            app:destination="@id/imConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_keyboardSettingsFragment"
            app:destination="@id/keyboardSettingsFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_clipboardSettingsFragment"
            app:destination="@id/clipboardSettingsFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_advancedSettingsFragment"
            app:destination="@id/advancedSettingsFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_themeFragment"
            app:destination="@id/themeFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_pinyinDictionaryFragment"
            app:destination="@id/pinyinDictionaryFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_developerFragment"
            app:destination="@id/developerFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_pluginFragment"
            app:destination="@id/pluginFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/globalConfigFragment"
        android:name="com.baidu.input_mi.ui.main.settings.global.GlobalConfigFragment">
        <action
            android:id="@+id/action_globalConfigFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/imListFragment"
        android:name="com.baidu.input_mi.ui.main.settings.im.InputMethodListFragment"
        android:label="@string/input_methods_conf">
        <action
            android:id="@+id/action_imListFragment_to_imConfigFragment"
            app:destination="@id/imConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/imConfigFragment"
        android:name="com.baidu.input_mi.ui.main.settings.im.InputMethodConfigFragment">
        <action
            android:id="@+id/action_imConfigFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_imConfigFragment_to_pinyinDictionaryFragment"
            app:destination="@id/pinyinDictionaryFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_imConfigFragment_to_punctuationEditorFragment"
            app:destination="@id/punctuationEditorFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_imConfigFragment_to_quickPhraseListFragment"
            app:destination="@id/quickPhraseListFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_imConfigFragment_to_addonConfigFragment"
            app:destination="@id/addonConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_imConfigFragment_to_pinyinCustomPhraseFragment"
            app:destination="@id/pinyinCustomPhraseFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/addonListFragment"
        android:name="com.baidu.input_mi.ui.main.settings.addon.AddonListFragment"
        android:label="@string/addons_conf">
        <action
            android:id="@+id/action_addonListFragment_to_addonConfigFragment"
            app:destination="@id/addonConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/addonConfigFragment"
        android:name="com.baidu.input_mi.ui.main.settings.addon.AddonConfigFragment">
        <action
            android:id="@+id/action_addonConfigFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_to_pinyinDictionaryFragment"
            app:destination="@id/pinyinDictionaryFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_to_punctuationEditorFragment"
            app:destination="@id/punctuationEditorFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_to_quickPhraseListFragment"
            app:destination="@id/quickPhraseListFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_self"
            app:destination="@id/addonConfigFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_to_tableInputMethodFragment"
            app:destination="@id/tableInputMethodFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_addonConfigFragment_to_pinyinCustomPhraseFragment"
            app:destination="@id/pinyinCustomPhraseFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/keyboardSettingsFragment"
        android:name="com.baidu.input_mi.ui.main.settings.behavior.KeyboardSettingsFragment"
        android:label="@string/keyboard" />
    <fragment
        android:id="@+id/clipboardSettingsFragment"
        android:name="com.baidu.input_mi.ui.main.settings.behavior.ClipboardSettingsFragment"
        android:label="@string/clipboard" />
    <fragment
        android:id="@+id/advancedSettingsFragment"
        android:name="com.baidu.input_mi.ui.main.settings.behavior.AdvancedSettingsFragment"
        android:label="@string/advanced" />
    <fragment
        android:id="@+id/themeFragment"
        android:name="com.baidu.input_mi.ui.main.settings.theme.ThemeFragment"
        android:label="@string/theme">
    </fragment>

    <fragment
        android:id="@+id/listFragment"
        android:name="com.baidu.input_mi.ui.main.settings.ListFragment" />
    <fragment
        android:id="@+id/pinyinDictionaryFragment"
        android:name="com.baidu.input_mi.ui.main.settings.PinyinDictionaryFragment"
        android:label="@string/pinyin_dict" />
    <fragment
        android:id="@+id/punctuationEditorFragment"
        android:name="com.baidu.input_mi.ui.main.settings.PunctuationEditorFragment" />
    <fragment
        android:id="@+id/developerFragment"
        android:name="com.baidu.input_mi.ui.main.DeveloperFragment"
        android:label="@string/developer" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.baidu.input_mi.ui.main.AboutFragment"
        android:label="@string/about">
        <action
            android:id="@+id/action_aboutFragment_to_licensesFragment"
            app:destination="@id/licensesFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/licensesFragment"
        android:name="com.baidu.input_mi.ui.main.LicensesFragment"
        android:label="@string/open_source_licenses" />
    <fragment
        android:id="@+id/quickPhraseListFragment"
        android:name="com.baidu.input_mi.ui.main.settings.QuickPhraseListFragment"
        android:label="@string/quickphrase_editor">
        <action
            android:id="@+id/action_quickPhraseListFragment_to_quickPhraseEditFragment"
            app:destination="@id/quickPhraseEditFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/quickPhraseEditFragment"
        android:name="com.baidu.input_mi.ui.main.settings.QuickPhraseEditFragment" />
    <fragment
        android:id="@+id/tableInputMethodFragment"
        android:name="com.baidu.input_mi.ui.main.settings.TableInputMethodFragment"
        android:label="@string/table_im" />
    <fragment
        android:id="@+id/pluginFragment"
        android:name="com.baidu.input_mi.ui.main.PluginFragment"
        android:label="@string/plugins" />
    <fragment
        android:id="@+id/pinyinCustomPhraseFragment"
        android:name="com.baidu.input_mi.ui.main.settings.PinyinCustomPhraseFragment" />
</navigation>